@@ -32,6 +32,7 @@ src/Copy.c -text
 src/Detrend.c -text
 src/Diff.c -text
 src/Enlarge.c -text
+src/Enlargegrid.c -text
 src/Ensstat.c -text
 src/Exprf.c -text
 src/Filedes.c -text
