@@ -148,40 +148,35 @@ static void gen_index(int gridID1, int gridID2, int *index)
 }
 
 
-void *Mergegrid(void *argument)
+void *Enlargegrid(void *argument)
 {
-  static char func[] = "Mergegrid";
+  static char func[] = "Enlargegrid";
   int varID;
   int nrecs = 0;
   int tsID, recID, levelID;
-  int nrecs2;
-  int streamID1, streamID2, streamID3;
-  int vlistID1 , vlistID2, vlistID3;
+  int streamID1, streamID2;
+  int vlistID1 , vlistID2;
   int nmiss1, nmiss2;
   int gridsize1, gridsize2;
   int gridID1, gridID2;
-  int taxisID1, taxisID3;
+  int taxisID1, taxisID2;
   int index;
   int i, *gindex = NULL;
-  int ndiffgrids;
-  double missval1, missval2;
+  int ndiffgrids, ngrids;
+  double missval1;
   double *array1, *array2;
 
   cdoInitialize(argument);
+
+  operatorInputArg("grid description file or name");
+  gridID2 = cdoDefineGrid(operatorArgv()[0]);
 
   streamID1 = streamOpenRead(cdoStreamName(0));
   if ( streamID1 < 0 ) cdiError(streamID1, "Open failed on %s", cdoStreamName(0));
 
   vlistID1 = streamInqVlist(streamID1);
   taxisID1 = vlistInqTaxis(vlistID1);
-  taxisID3 = taxisDuplicate(taxisID1);
-
-  streamID2 = streamOpenRead(cdoStreamName(1));
-  if ( streamID2 < 0 ) cdiError(streamID2, "Open failed on %s", cdoStreamName(1));
-
-  vlistID2 = streamInqVlist(streamID2);
-
-  vlistCompare(vlistID1, vlistID2, func_code);
+  taxisID2 = taxisDuplicate(taxisID1);
 
   ndiffgrids = 0;
   for ( index = 1; index < vlistNgrids(vlistID1); index++ )
@@ -190,82 +185,61 @@ void *Mergegrid(void *argument)
 
   if ( ndiffgrids > 0 ) cdoAbort("Too many different grids in %s", cdoStreamName(0));
 
-  ndiffgrids = 0;
-  for ( index = 1; index < vlistNgrids(vlistID2); index++ )
-    if ( vlistGrid(vlistID2, 0) != vlistGrid(vlistID2, index))
-      ndiffgrids++;
-
-  if ( ndiffgrids > 0 ) cdoAbort("Too many different grids in %s", cdoStreamName(1));
-
   gridID1 = vlistGrid(vlistID1, 0);
-  gridID2 = vlistGrid(vlistID2, 0);
 
   gridsize1 = gridInqSize(gridID1);
   gridsize2 = gridInqSize(gridID2);
 
   array1 = (double *) malloc(gridsize1*sizeof(double));
   array2 = (double *) malloc(gridsize2*sizeof(double));
-  gindex = (int *) malloc(gridsize2*sizeof(int));
+  gindex = (int *) malloc(gridsize1*sizeof(int));
 
-  gen_index(gridID1, gridID2, gindex);
+  gen_index(gridID2, gridID1, gindex);
 
-  vlistID3 = vlistDuplicate(vlistID1);
+  vlistID2 = vlistDuplicate(vlistID1);
 
-  streamID3 = streamOpenWrite(cdoStreamName(2), cdoFiletype());
-  if ( streamID3 < 0 ) cdiError(streamID3, "Open failed on %s", cdoStreamName(2));
+  ngrids = vlistNgrids(vlistID1);
+  for ( index = 0; index < ngrids; index++ )
+    {
+      vlistChangeGridIndex(vlistID2, index, gridID2);
+    }
 
-  vlistDefTaxis(vlistID3, taxisID3);
-  streamDefVlist(streamID3, vlistID3);
+  streamID2 = streamOpenWrite(cdoStreamName(1), cdoFiletype());
+  if ( streamID2 < 0 ) cdiError(streamID2, "Open failed on %s", cdoStreamName(1));
+
+  vlistDefTaxis(vlistID2, taxisID2);
+  streamDefVlist(streamID2, vlistID2);
 
   tsID = 0;
   while ( (nrecs = streamInqTimestep(streamID1, tsID)) )
     {
-      taxisCopyTimestep(taxisID3, taxisID1);
+      taxisCopyTimestep(taxisID2, taxisID1);
 
-      nrecs2 = streamInqTimestep(streamID2, tsID);
-      if ( nrecs2 == 0 )
-	cdoAbort("Input streams have different number of timesteps!");
-
-      if ( nrecs != nrecs2 )
-	cdoAbort("Input streams have different number of records!");
-
-      streamDefTimestep(streamID3, tsID);
+      streamDefTimestep(streamID2, tsID);
 
       for ( recID = 0; recID < nrecs; recID++ )
 	{
-	  streamInqRecord(streamID2, &varID, &levelID);
-	  streamReadRecord(streamID2, array2, &nmiss2);
-
-	  missval2 = vlistInqVarMissval(vlistID2, varID);
-
 	  streamInqRecord(streamID1, &varID, &levelID);
 	  streamReadRecord(streamID1, array1, &nmiss1);
 
 	  missval1 = vlistInqVarMissval(vlistID1, varID);
 
+	  for ( i = 0; i < gridsize2; i++ ) array2[i] = missval1;
+	  for ( i = 0; i < gridsize1; i++ )
+	    if ( gindex[i] >= 0 )
+	      array2[gindex[i]] = array1[i];		
+
+	  nmiss2 = 0;
 	  for ( i = 0; i < gridsize2; i++ )
-	    {
-	      if ( gindex[i] >= 0 && !DBL_IS_EQUAL(array2[i], missval2) )
-		{
-		  array1[gindex[i]] = array2[i];
-		}
-	    }
+	    if ( DBL_IS_EQUAL(array2[i], missval1) ) nmiss2++;
 
-	  if ( nmiss1 )
-	    {
-	      nmiss1 = 0;
-	      for ( i = 0; i < gridsize1; i++ )
-		if ( DBL_IS_EQUAL(array1[i], missval1) ) nmiss1++;
-	    }
-
-	  streamDefRecord(streamID3, varID, levelID);
-	  streamWriteRecord(streamID3, array1, nmiss1);
+	  streamDefRecord(streamID2, varID, levelID);
+	  streamWriteRecord(streamID2, array2, nmiss2);
 	}
 
       tsID++;
     }
 
-  streamClose(streamID3);
   streamClose(streamID2);
   streamClose(streamID1);
  
